Added test, parametrized test